Java 15 & Spring 2.4 New BuildpackTest